# AI-agents-playground

./: .gitignore  README.md  pyproject.toml
agents/1-tool-use/: README.md  pyproject.toml  youtube_agent.py
agents/2-agentic-workflows/: README.md  ava.py  contacts.csv  pyproject.toml  request.txt
agents/2-agentic-workflows/instructions/: ava.md  executor.md  planner.md
agents/2-agentic-workflows/tools/: for_agents.py  functions.py  gmail.py
agents/3-llm-loop/: README.md  functions.py  llm-loop-copywriter.ipynb
agents/3-llm-loop/context/: instructions.txt
agents/3-llm-loop/profiles/: profile-0.txt  profile-1.txt
agents/4-mcp/: directory.csv  mcp-server-example.py  pyproject.toml
