[project]
name = "1-tool-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.20",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "openai>=1.12.0",
    "openai-agents>=0.8.4",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.2",
]
